# langgraph-wxo

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  spec_drift.md
.github/workflows/: ci.yml  release.yml
langgraph_wxo/: cli.py
langgraph_wxo/analyze/: __init__.py  factory_ast.py
langgraph_wxo/compat/: __init__.py  spec.py
langgraph_wxo/config/: __init__.py  loader.py  models.py
langgraph_wxo/emulate/: __init__.py  _child.py  mockcreds.py  runner.py
langgraph_wxo/model/: __init__.py  watsonx.py
langgraph_wxo/templates/: __init__.py  _engine.py
langgraph_wxo/templates/governed-rag/: template.toml
langgraph_wxo/templates/minimal/: README.md.jinja  agent.py.jinja  agent.yaml.jinja  requirements.txt.jinja  template.toml
langgraph_wxo/templates/react-tools/: README.md.jinja  agent.py.jinja  agent.yaml.jinja  requirements.txt.jinja  template.toml  watsonx_model.py.jinja
langgraph_wxo/validate/: __init__.py  engine.py  findings.py
langgraph_wxo/validate/rules/: __init__.py  agent_yaml.py  checkpointer.py  connections.py  deps.py  factory.py  limits.py
tests/: conftest.py  test_cli.py  test_emulator.py  test_factory_ast.py  test_model.py  test_templates.py  test_validate_agent_yaml.py  test_validate_deps_checkpointer.py  test_validate_factory_connections.py  test_validate_scenario_diagnostics.py
